# template-table-extractor

./: .gitignore  README.md  pyproject.toml
extractor/: __init__.py
extractor/core/: document.py
tests/: test_document.py
