[tool.poetry]
name = "template-table-extractor"
version = "0.1.0"
description = "A tool and library to extract tables from pdf document based on templates."
authors = ["Sumit Arora <singhsays@gmail.com>"]
readme = "README.md"
packages = [{ include = "extractor" }]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.6"
loguru = "^0.7.0"

[tool.poetry.scripts]
tablextractor = 'extractor:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
